samples/_failures_safe/1761394445_cb5676_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2289ec97.c: In function ‘main’:
./samples/SAFE/__tmp_2289ec97.c:136:12: error: missing terminating " character
  136 |     printf("
      |            ^
./samples/SAFE/__tmp_2289ec97.c:136:5: error: expected expression at end of input
  136 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_2289ec97.c:136:5: error: expected declaration or statement at end of input
